WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287303
Regression:
290044@main
- Unreviewed build fix in Buffer.mm
https://bugs.webkit.org/show_bug.cgi?id=287303
Summary
Regression: 290044@main - Unreviewed build fix in Buffer.mm
Mike Wyrzykowski
Reported
2025-02-07 16:06:59 PST
Regression:
290044@main
- Unreviewed build fix
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-07 16:08:34 PST
<
rdar://problem/144417224
>
Mike Wyrzykowski
Comment 2
2025-02-07 16:11:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40256
EWS
Comment 3
2025-02-07 16:16:10 PST
Committed
290057@main
(1a489bdd0dd5): <
https://commits.webkit.org/290057@main
> Reviewed commits have been landed. Closing PR #40256 and removing active labels.
EWS
Comment 4
2025-02-10 14:11:23 PST
Committed
289651.78@safari-7621-branch
(a10f9b4b80ec): <
https://commits.webkit.org/289651.78@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2554 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug