Regression: 290044@main - Unreviewed build fix in Buffer.mm https://bugs.webkit.org/show_bug.cgi?id=287303 radar://144417224

Unreviewed build fix - MTLStorageModeManaged is not available in iOS

* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::takeSlowIndexValidationPath):
(WebGPU::Buffer::takeSlowIndirectIndexValidationPath):
(WebGPU::Buffer::takeSlowIndirectValidationPath):

Canonical link: https://commits.webkit.org/290057@main